--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-	"name": "chrisboulton/php-resque",
+	"name": "dpanzer/php-resque",
 	"type": "library",
 	"description": "Redis backed library for creating background jobs and processing them later. Based on resque for Ruby.",
 	"keywords": ["job", "background", "redis", "resque"],
-	"homepage": "http://www.github.com/chrisboulton/php-resque/",
+	"homepage": "http://www.github.com/dpanzer/php-resque/",
 	"license": "MIT",
 	"authors": [
 		{
-			"name": "Chris Boulton",
-			"email": "chris@bigcommerce.com"
+			"name": "Danny Panzer",
+			"email": "danny.panzer@gmail.com"
 		}
 	],
 	"repositories": [
